--- a/WebProjects-master/pom.xml
+++ b/WebProjects-master/pom.xml
@@ -7,7 +7,7 @@
   <packaging>war</packaging>
   <version>4.0-SNAPSHOT</version>
   <name>webapps</name>
-  <url>http://maven.apache.org</url>
+  <url>https://maven.apache.org</url>
 
   <properties>
     <!--
@@ -23,7 +23,7 @@
       <id>central</id>
       <name>Maven Repository Switchboard</name>
       <layout>default</layout>
-      <url>http://repo1.maven.org/maven2</url>
+      <url>https://repo1.maven.org/maven2</url>
       <snapshots>
         <enabled>false</enabled>
       </snapshots>
